--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material/toolbar": "^2.3.0",
     "firebase": "^8.6.2",
     "material-icons": "^0.6.4",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
