--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.1",
-    "@angular/cdk": "^12.0.1",
+    "@angular/cdk": "^12.0.2",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.1",
-    "@angular/material": "^12.0.1",
+    "@angular/material": "^12.0.2",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
@@ -27,6 +27,7 @@
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "uuid": "^3.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "~12.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
